syntax = "proto3";

package user;

service UserService {
    rpc GetUserParamsById (GetUserParamsByIdRequest) returns (GetUserParamsByIdResponse);
}

message GetUserParamsByIdRequest {
    int64 user_id = 1;
}

message GetUserParamsByIdResponse {
    int32 age = 1;
    optional double weight_kg = 2;
    optional int32 height_cm = 3;
}